умножил обратную вероятность на начальную

--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,16 +599,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.3542476897034294e-222"
+       "7.888236188485648e-224"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,36 +649,39 @@
     "        \n",
     "        self.b.append([1 for state in self.states])\n",
     "        #Recursion\n",
-    "        for i in range(self.L-1,1,-1): # С двойки?\n",
+    "        for i in range(self.L-1,1,-1):\n",
     "            self.step(i)\n",
     "            \n",
     "        # Finish # перевернуть b\n",
     "        self.b = self.b[::-1]\n",
     "        self.pathProbability = sum([\n",
     "            self.transitionsProbability[state]*self.diceValueProbability[state][self.data[0] - 1] \n",
-    "            for state in self.states] * np.array(self.b[0]))\n",
+    "            for state in self.states] * np.array(self.b[0]) * [val for val  in self.startProbability.values()]) \n",
     "        self.pathProbability = sum(self.pathProbability)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4.225111988619696e-222"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FORWARD: 7.888236188485648e-224\n",
+      "BACKWARD: 7.065050779225739e-224\n",
+      "RELATION B/F: 0.8956439196811194\n"
+     ]
     }
    ],
    "source": [
     "backwardHack = backwardAlgorithm(dataset300)\n",
-    "backwardHack()"
+    "b=backwardHack()\n",
+    "forwardHack = forwardAlgorithm(dataset300)\n",
+    "f=forwardHack()\n",
+    "\n",
+    "print('FORWARD: {}\\nBACKWARD: {}\\nRELATION B/F: {}'.format(f,b,b/f))"
    ]
   },
   {
