--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -988,25 +988,98 @@
     "class BaumWelchTrainig(parametrs):\n",
     "    def __init__(self, data):\n",
     "        parametrs.__init__(self, data)\n",
+    "\n",
+    "        # For forward\n",
+    "        self.f = []\n",
+    "        self.pathProbability = None\n",
+    "        # for backward\n",
+    "        self.b = []\n",
+    "        # For decoding\n",
+    "        self.conditionalProbability = None\n",
     "        \n",
-    "        pass\n",
+    "        self.epselon = 10**-100\n",
+    "        self.iterationNumber = 100\n",
+    "        \n",
+    "    def stepForward(self, index):\n",
+    "        self.f.append([])\n",
+    "        for state in self.states:\n",
+    "            transitionProbability = self.transitionsProbability[state]\n",
+    "            observedProbability = self.diceValueProbability[state][self.data[index] - 1]\n",
+    "            previuosState = self.f[index-1]\n",
+    "            probability = observedProbability * sum(previuosState * transitionProbability)\n",
+    "            self.f[-1].append(probability)\n",
+    "    \n",
+    "    def stepBackward(self, index):\n",
+    "        ### backward step\n",
+    "        for state in self.states: # first fair then unfair\n",
+    "            transitionProbability = self.transitionsProbability[state]\n",
+    "            observedProbability = self.diceValueProbability[state][self.data[index] - 1]\n",
+    "            nextState = self.b[-1]\n",
+    "            probability = sum(transitionProbability * observedProbability * nextState)\n",
+    "            self.b.append(probability)\n",
+    "            \n",
+    "    def initializationForwardBack(self):\n",
+    "        ### Forward part ###\n",
+    "        # Init\n",
+    "        self.f.append([self.startProbability[state] for state in self.states]) # Не уверен\n",
+    "        # Recursion\n",
+    "        for i in range(1,self.L):\n",
+    "            self.stepForward(i)\n",
+    "        self.pathProbability = sum(self.f[-1])\n",
+    "        self.b.append([1,1])\n",
+    "        ### Backward part ###\n",
+    "        for i in range(self.L-1,1,-1): # С двойки?\n",
+    "            self.stepBackward(i)\n",
+    "    \n",
     "    \n",
     "    def __call__(self):\n",
-    "        if self.isFirres == False: self.initialization()\n",
+    "        if self.isFitted == False: self.initialization()\n",
     "        print('FITTED')\n",
     "        print('Parametrs')\n",
     "        print('TransitionsProbability: {}'.format(self.transitionsProbability))\n",
     "        print('startProbability: {}'.format(self.startProbability))\n",
     "        print('diceValueProbability: {}'.format(self.diceValueProbability))\n",
     "    \n",
-    "    def step(self, index):\n",
-    "        pass\n",
-    "    \n",
     "    def initialization(self):\n",
-    "        pass\n",
+    "        prLog = 10000000000000\n",
+    "        for step in range(self.iterationNumber):\n",
+    "            # Calculate f and b\n",
+    "            self.f = []\n",
+    "            self.pathProbability = 0\n",
+    "            self.b = []\n",
+    "            self.initializationForwardBack()\n",
+    "            # Change paramets\n",
+    "            self.changeParametrs()\n",
+    "            currentLog = self.logLikelihood()\n",
+    "            if (abs(currentLog - prLog) < self.epselon: break\n",
+    "            prLog = currentLog\n",
+    "    \n",
+    "    \n",
+    "    def logLikelihood(self):\n",
+    "        return 0\n",
     "    \n",
     "    def changeParametrs(self):\n",
-    "        pass"
+    "        Afair2fair = sum([ self.f[0][i] * self.b[0][i+1] *\n",
+    "                          self.transitionProbability['F'][0] *\n",
+    "                          self.diceValueProbability['F'[data[i + 1] -1]\n",
+    "                     for i in range(1, self.L)]/self.pathProbability\n",
+    "                          \n",
+    "        Afair2unfair = sum([ self.f[0][i] * self.b[1][i+1] *\n",
+    "                          self.transitionProbability['F'][1] *\n",
+    "                          self.diceValueProbability['F'[data[i + 1] -1]\n",
+    "                     for i in range(1, self.L)]/self.pathProbability\n",
+    "        \n",
+    "        Aunfair2fair = sum([ self.f[1][i] * self.b[0][i+1] *\n",
+    "                          self.transitionProbability['U'][0] *\n",
+    "                          self.diceValueProbability['U'[data[i + 1] -1]\n",
+    "                     for i in range(1, self.L)]/self.pathProbability\n",
+    "                            \n",
+    "        Aunfair2unfair = sum([ self.f[1][i] * self.b[1][i+1] *\n",
+    "                          self.transitionProbability['U'][1] *\n",
+    "                          self.diceValueProbability['U'[data[i + 1] -1]\n",
+    "                     for i in range(1, self.L)]/self.pathProbability\n",
+    "                              \n",
+    "        # Add E"
    ]
   }
  ],
