improve forward algo

--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -581,9 +581,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'baseAlgo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-f25b1a88968b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mforwardAlgorithm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbaseAlgo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mbaseAlgo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'baseAlgo' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class forwardAlgorithm(baseAlgo):\n",
     "    def __init__(self, data):\n",
@@ -611,7 +623,8 @@
     "    \n",
     "    def initialization(self):\n",
     "        # Init\n",
-    "        self.f.append([self.startProbability[state] for state in self.states]) # Не уверен\n",
+    "        self.f.append([self.startProbability[state] for state in self.states] * \n",
+    "                      np.array([self.diceValueProbability[state][self.data[0] - 1] for state in self.states]))\n",
     "        # Recursion\n",
     "        for i in range(1,self.L):\n",
     "            self.step(i)\n",
@@ -735,7 +748,8 @@
     "    def initialization(self):\n",
     "        ### Forward part ###\n",
     "        # Init\n",
-    "        self.f.append([self.startProbability[state] for state in self.states]) # Не уверен\n",
+    "        self.f.append([self.startProbability[state] for state in self.states] * \n",
+    "                      np.array([self.diceValueProbability[state][self.data[0] - 1] for state in self.states]))\n",
     "        # Recursion\n",
     "        for i in range(1,self.L):\n",
     "            self.stepForward(i)\n",
@@ -1056,7 +1070,7 @@
     "    \n",
     "    \n",
     "    def logLikelihood(self):\n",
-    "        return 0\n",
+    "        return sum( [np.log(1)]\n",
     "    \n",
     "    def changeParametrs(self):\n",
     "        Afair2fair = sum([ self.f[0][i] * self.b[0][i+1] *\n",
