--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -29,16 +29,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1, 'F')\n",
+      "(2, 'F')\n",
+      "(2, 'F')\n",
+      "(1, 'F')\n",
+      "(3, 'F')\n",
+      "(6, 'F')\n",
+      "(4, 'F')\n",
       "(6, 'U')\n",
-      "(1, 'U')\n",
       "(6, 'U')\n",
-      "(6, 'U')\n",
-      "(6, 'U')\n",
-      "(6, 'U')\n",
-      "(1, 'U')\n",
-      "(3, 'U')\n",
-      "(3, 'U')\n",
-      "(5, 'U')\n"
+      "(6, 'U')\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,21 +581,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'baseAlgo' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-f25b1a88968b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mforwardAlgorithm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbaseAlgo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mbaseAlgo\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'baseAlgo' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class forwardAlgorithm(baseAlgo):\n",
     "    def __init__(self, data):\n",
@@ -633,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,29 +650,30 @@
     "        \n",
     "        self.b.append([1 for state in self.states])\n",
     "        #Recursion\n",
-    "        for i in range(self.L-1,1,-1):\n",
+    "        for i in range(self.L-1,0,-1):\n",
     "            self.step(i)\n",
     "            \n",
     "        # Finish # перевернуть b\n",
     "        self.b = self.b[::-1]\n",
-    "        self.pathProbability = sum([\n",
-    "            self.transitionsProbability[state]*self.diceValueProbability[state][self.data[0] - 1] \n",
-    "            for state in self.states] * np.array(self.b[0]) * [val for val  in self.startProbability.values()]) \n",
-    "        self.pathProbability = sum(self.pathProbability)"
+    "        \n",
+    "        #self.pathProbability = sum([\n",
+    "        #    self.transitionsProbability[state]*self.diceValueProbability[state][self.data[0] - 1] \n",
+    "        #    for state in self.states] * np.array(self.b[0])) # [val for val  in self.startProbability.values()] \n",
+    "        self.pathProbability = sum(self.b[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FORWARD: 4.312457644119492e-226\n",
-      "BACKWARD: 2.806795585646087e-226\n",
-      "RELATION B/F: 1.5364345256111058\n"
+      "FORWARD: 1.1105767149128564e-225\n",
+      "BACKWARD: 7.60775506801369e-225\n",
+      "RELATION B/F: 6.8502742456748225\n"
      ]
     }
    ],
@@ -694,7 +683,7 @@
     "forwardHack = forwardAlgorithm(dataset300)\n",
     "f=forwardHack()\n",
     "\n",
-    "print('FORWARD: {}\\nBACKWARD: {}\\nRELATION B/F: {}'.format(f,b,f/b))"
+    "print('FORWARD: {}\\nBACKWARD: {}\\nRELATION B/F: {}'.format(f,b,b/f))"
    ]
   },
   {
@@ -760,7 +749,7 @@
     "        self.conditionalProbability = []\n",
     "        self.bPrevious = [1,1]\n",
     "        \n",
-    "        for i in range(self.L-1,1,-1): # С двойки?\n",
+    "        for i in range(self.L-1,0,-1): # С двойки?\n",
     "            self.stepBackwardDecoding(i)"
    ]
   },
