--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -1429,9 +1429,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'parametrs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-91-ed040d6969e4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mBaumWelchTrainig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparametrs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mparametrs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;31m# For forward\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'parametrs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "class BaumWelchTrainig(parametrs):\n",
     "    def __init__(self, data):\n",
@@ -1499,7 +1511,8 @@
     "            # Change paramets\n",
     "            self.changeParametrs()\n",
     "            currentLog = self.logLikelihood()\n",
-    "            if (abs(currentLog - prLog) < self.epselon: break\n",
+    "            if abs(currentLog - prLog) < self.epselon:\n",
+    "                break\n",
     "            prLog = currentLog\n",
     "    \n",
     "    \n",
@@ -1507,6 +1520,30 @@
     "        return np.log(self.pathProbability)\n",
     "    \n",
     "    def changeParametrs(self):\n",
+    "        # Add A\n",
+    "        A = {}\n",
+    "        for fromI, fromState in enumerate(self.states):\n",
+    "            A[fromState] = {}\n",
+    "            for newI, newState in enumerate(self.states):\n",
+    "                sum_step = [\n",
+    "                    self.f[i][fromI] * self.b[i][newI] * \n",
+    "                    self.diceValueProbability[newState][self.data[i] - 1]\n",
+    "                    for i in range(self.L)\n",
+    "                ]\n",
+    "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/ self.pathProbability\n",
+    "                A[fromState][newState] = probability\n",
+    "        # Add E\n",
+    "        pass\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "        Afair2fair = sum([ self.f[0][i] * self.b[0][i+1] *\n",
     "                          self.transitionProbability['F'][0] *\n",
     "                          self.diceValueProbability['F'[data[i + 1] -1]\n",
@@ -1525,10 +1562,43 @@
     "        Aunfair2unfair = sum([ self.f[1][i] * self.b[1][i+1] *\n",
     "                          self.transitionProbability['U'][1] *\n",
     "                          self.diceValueProbability['U'[data[i + 1] -1]\n",
-    "                     for i in range(1, self.L)]/self.pathProbability\n",
-    "                              \n",
-    "        # Add E"
+    "                     for i in range(1, self.L)]/self.pathProbability"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
