&finish baum-welch

--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,21 +1429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'parametrs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-91-ed040d6969e4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mBaumWelchTrainig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparametrs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mparametrs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;31m# For forward\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'parametrs' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BaumWelchTrainig(parametrs):\n",
     "    def __init__(self, data):\n",
@@ -1532,37 +1520,29 @@
     "                ]\n",
     "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/ self.pathProbability\n",
     "                A[fromState][newState] = probability\n",
-    "        # Add E\n",
-    "        pass\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "        Afair2fair = sum([ self.f[0][i] * self.b[0][i+1] *\n",
-    "                          self.transitionProbability['F'][0] *\n",
-    "                          self.diceValueProbability['F'[data[i + 1] -1]\n",
-    "                     for i in range(1, self.L)]/self.pathProbability\n",
-    "                          \n",
-    "        Afair2unfair = sum([ self.f[0][i] * self.b[1][i+1] *\n",
-    "                          self.transitionProbability['F'][1] *\n",
-    "                          self.diceValueProbability['F'[data[i + 1] -1]\n",
-    "                     for i in range(1, self.L)]/self.pathProbability\n",
+    "        # Add B\n",
+    "        B = {}\n",
+    "        for index, state in enumerate(self.states):\n",
+    "            B[state] = [0,0,0,0,0,0]\n",
+    "            for i,value in enumerate(self.data):\n",
+    "                B[state][value - 1] =+ f[i][index] * b[i][index]\n",
     "        \n",
-    "        Aunfair2fair = sum([ self.f[1][i] * self.b[0][i+1] *\n",
-    "                          self.transitionProbability['U'][0] *\n",
-    "                          self.diceValueProbability['U'[data[i + 1] -1]\n",
-    "                     for i in range(1, self.L)]/self.pathProbability\n",
-    "                            \n",
-    "        Aunfair2unfair = sum([ self.f[1][i] * self.b[1][i+1] *\n",
-    "                          self.transitionProbability['U'][1] *\n",
-    "                          self.diceValueProbability['U'[data[i + 1] -1]\n",
-    "                     for i in range(1, self.L)]/self.pathProbability"
+    "        # change\n",
+    "        fair = A['F']['F'] + A['F']['U']\n",
+    "        unfair = A['U']['F'] + A['U']['U']\n",
+    "        \n",
+    "        self.transitionsProbability = {\n",
+    "            'F': np.array([A['F']['F'] /fair  , A['F']['U']/fair]), # to F, to U\n",
+    "            'U': np.array([A['U']['F'] /unfair, A['U']['U']/unfair]) # to F, to U\n",
+    "        }\n",
+    "        \n",
+    "        fair = sum(B['F'])\n",
+    "        fair = sum(B['U'])\n",
+    "        \n",
+    "        self.diceValueProbability = {\n",
+    "            'F': [value/fair for value in B['F']],\n",
+    "            'U': [value/unfair for value in B['U']]\n",
+    "        }"
    ]
   },
   {
