--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,21 +1450,21 @@
     "        \n",
     "    def stepForward(self, index):\n",
     "        self.f.append([])\n",
-    "        for state in self.states:\n",
-    "            transitionProbability = self.transitionsProbability[state]\n",
+    "        previuosState = self.f[-2]\n",
+    "        for i, state in enumerate(self.states):\n",
+    "            transitionProbability = np.array([val[i] for val in self.transitionsProbability.values()])\n",
     "            observedProbability = self.diceValueProbability[state][self.data[index] - 1]\n",
-    "            previuosState = self.f[index-1]\n",
     "            probability = observedProbability * sum(previuosState * transitionProbability)\n",
     "            self.f[-1].append(probability)\n",
     "    \n",
     "    def stepBackward(self, index):\n",
-    "        ### backward step\n",
+    "        self.b.append([])\n",
+    "        nextState = self.b[-2]\n",
+    "        observedProbability =  np.array([val[self.data[index]-1] for val in self.diceValueProbability.values()])\n",
     "        for state in self.states: # first fair then unfair\n",
     "            transitionProbability = self.transitionsProbability[state]\n",
-    "            observedProbability = self.diceValueProbability[state][self.data[index] - 1]\n",
-    "            nextState = self.b[-1]\n",
     "            probability = sum(transitionProbability * observedProbability * nextState)\n",
-    "            self.b.append(probability)\n",
+    "            self.b[-1].append(probability)\n",
     "            \n",
     "    def initializationForwardBack(self):\n",
     "        ### Forward part ###\n",
@@ -1476,7 +1476,7 @@
     "        self.pathProbability = sum(self.f[-1])\n",
     "        self.b.append([1,1])\n",
     "        ### Backward part ###\n",
-    "        for i in range(self.L-1,1,-1): # С двойки?\n",
+    "        for i in range(self.L-1,0,-1): # С двойки?\n",
     "            self.stepBackward(i)\n",
     "    \n",
     "    \n",
@@ -1515,7 +1515,7 @@
     "            for newI, newState in enumerate(self.states):\n",
     "                sum_step = [\n",
     "                    self.f[i][fromI] * self.b[i][newI] * \n",
-    "                    self.diceValueProbability[newState][self.data[i] - 1]\n",
+    "                    self.diceValueProbability[newState][self.data[i] - 1] \n",
     "                    for i in range(self.L)\n",
     "                ]\n",
     "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/ self.pathProbability\n",
@@ -1547,17 +1547,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "300\n",
+      "300\n",
+      "300\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "invalid index to scalar variable.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-127-caa402209d72>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtrainig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBaumWelchTrainig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset300\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrainig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-126-d68605791bd0>\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misFitted\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitialization\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'FITTED'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Parametrs'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-126-d68605791bd0>\u001b[0m in \u001b[0;36minitialization\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     63\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitializationForwardBack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m             \u001b[1;31m# Change paramets\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchangeParametrs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m             \u001b[0mcurrentLog\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlogLikelihood\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrentLog\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mprLog\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mepselon\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-126-d68605791bd0>\u001b[0m in \u001b[0;36mchangeParametrs\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     92\u001b[0m             \u001b[0mB\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     93\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 94\u001b[1;33m                 \u001b[0mB\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvalue\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     95\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m         \u001b[1;31m# change\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: invalid index to scalar variable."
+     ]
+    }
+   ],
+   "source": [
+    "trainig = BaumWelchTrainig(dataset300)\n",
+    "trainig()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in range(10)]"
+   ]
   },
   {
    "cell_type": "code",
