need 2 fix and analyze

--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -1229,7 +1229,6 @@
     "    \n",
     "    def stepBackward(self, index):\n",
     "        ### backward step\n",
-    "        self.bCurrent = []\n",
     "        self.b.append([])\n",
     "        nextState = self.b[-2]\n",
     "        observedProbability =  np.array([val[self.data[index]-1] for val in self.diceValueProbability.values()])\n",
@@ -1397,11 +1396,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class parametrs:   # Сделаь универсальнее\n",
+    "class parametrs:\n",
     "    def __init__(self, data):\n",
     "        \n",
     "        self.isFitted = False\n",
@@ -1411,8 +1410,8 @@
     "        \n",
     "        self.states = ['F','U'] # F for Fair state, U for Unfair state\n",
     "        self.transitionsProbability = {\n",
-    "            'F': np.array([0.5,0.5]), # to F, to U\n",
-    "            'U': np.array([0.5,0.5]) # to F, to U\n",
+    "            'F': np.array([0.8,0.2]), # to F, to U\n",
+    "            'U': np.array([0.1,0.9]) # to F, to U\n",
     "        }\n",
     "        \n",
     "        self.startProbability = {\n",
@@ -1422,14 +1421,14 @@
     "        \n",
     "        self.diceValues = [1,2,3,4,5,6]\n",
     "        self.diceValueProbability = {\n",
-    "            'F': [1/6 for i in range(6)],\n",
-    "            'U': [1/6 for i in range(6)]\n",
+    "            'F': [2/12,2/12,2/12,1/12,2/12,3/12],\n",
+    "            'U': [1/10,2/10,1/20,3/20,5/20,5/20]\n",
     "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1445,8 @@
     "        self.conditionalProbability = None\n",
     "        \n",
     "        self.epselon = 10**-100\n",
-    "        self.iterationNumber = 20\n",
+    "        self.epselon = 1\n",
+    "        self.iterationNumber = 1000\n",
     "        \n",
     "    def stepForward(self, index):\n",
     "        self.f.append([])\n",
@@ -1469,7 +1469,8 @@
     "    def initializationForwardBack(self):\n",
     "        ### Forward part ###\n",
     "        # Init\n",
-    "        self.f.append([self.startProbability[state] for state in self.states]) # Не уверен\n",
+    "        self.f.append([self.startProbability[state] for state in self.states] * \n",
+    "                      np.array([self.diceValueProbability[state][self.data[0] - 1] for state in self.states]))\n",
     "        # Recursion\n",
     "        for i in range(1,self.L):\n",
     "            self.stepForward(i)\n",
@@ -1478,18 +1479,19 @@
     "        ### Backward part ###\n",
     "        for i in range(self.L-1,0,-1): # С двойки?\n",
     "            self.stepBackward(i)\n",
+    "        self.b = self.b[::-1]\n",
     "    \n",
     "    \n",
     "    def __call__(self):\n",
     "        if self.isFitted == False: self.initialization()\n",
-    "        print('FITTED')\n",
-    "        print('Parametrs')\n",
-    "        print('TransitionsProbability: {}'.format(self.transitionsProbability))\n",
-    "        print('startProbability: {}'.format(self.startProbability))\n",
-    "        print('diceValueProbability: {}'.format(self.diceValueProbability))\n",
+    "        pprint.pprint('FITTED')\n",
+    "        pprint.pprint('Parametrs')\n",
+    "        pprint.pprint('TransitionsProbability: {}'.format(self.transitionsProbability))\n",
+    "        #pprint.pprint('startProbability: {}'.format(self.startProbability))\n",
+    "        pprint.pprint('diceValueProbability: {}'.format(self.diceValueProbability))\n",
     "    \n",
     "    def initialization(self):\n",
-    "        prLog = 10000000000000\n",
+    "        prLog = 1000000000\n",
     "        for step in range(self.iterationNumber):\n",
     "            # Calculate f and b\n",
     "            self.f = []\n",
@@ -1499,9 +1501,13 @@
     "            # Change paramets\n",
     "            self.changeParametrs()\n",
     "            currentLog = self.logLikelihood()\n",
+    "            #print(currentLog)\n",
     "            if abs(currentLog - prLog) < self.epselon:\n",
+    "                print('Log doesnot change: stop in {} iteration'.format(step))\n",
     "                break\n",
     "            prLog = currentLog\n",
+    "        else:\n",
+    "            print('Stop: max iterations')\n",
     "    \n",
     "    \n",
     "    def logLikelihood(self):\n",
@@ -1514,19 +1520,21 @@
     "            A[fromState] = {}\n",
     "            for newI, newState in enumerate(self.states):\n",
     "                sum_step = [\n",
-    "                    self.f[i][fromI] * self.b[i][newI] * \n",
-    "                    self.diceValueProbability[newState][self.data[i] - 1] \n",
-    "                    for i in range(self.L)\n",
+    "                    self.f[i][fromI] * self.b[i+1][newI] * \n",
+    "                    self.diceValueProbability[newState][self.data[i+1] - 1] \n",
+    "                    for i in range(self.L-1)\n",
     "                ]\n",
     "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/ self.pathProbability\n",
     "                A[fromState][newState] = probability\n",
     "        # Add B\n",
     "        B = {}\n",
     "        for index, state in enumerate(self.states):\n",
-    "            B[state] = [0,0,0,0,0,0]\n",
+    "            B[state] = [.0,.0,.0,.0,.0,.0]\n",
     "            for i,value in enumerate(self.data):\n",
-    "                B[state][value - 1] =+ f[i][index] * b[i][index]\n",
+    "                B[state][value - 1] =+ self.f[i][index] * self.b[i][index]\n",
     "        \n",
+    "        #pprint.pprint(A)\n",
+    "        #pprint.pprint(B)\n",
     "        # change\n",
     "        fair = A['F']['F'] + A['F']['U']\n",
     "        unfair = A['U']['F'] + A['U']['U']\n",
@@ -1537,41 +1545,36 @@
     "        }\n",
     "        \n",
     "        fair = sum(B['F'])\n",
-    "        fair = sum(B['U'])\n",
+    "        unfair = sum(B['U'])\n",
     "        \n",
     "        self.diceValueProbability = {\n",
     "            'F': [value/fair for value in B['F']],\n",
     "            'U': [value/unfair for value in B['U']]\n",
-    "        }"
+    "        }\n",
+    "        \n",
+    "        #pprint.pprint(self.transitionsProbability)\n",
+    "        #pprint.pprint(self.diceValueProbability)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "300\n",
-      "300\n",
-      "300\n",
-      "300\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "invalid index to scalar variable.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-127-caa402209d72>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtrainig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBaumWelchTrainig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset300\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtrainig\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-126-d68605791bd0>\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misFitted\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitialization\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'FITTED'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Parametrs'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-126-d68605791bd0>\u001b[0m in \u001b[0;36minitialization\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     63\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitializationForwardBack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m             \u001b[1;31m# Change paramets\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchangeParametrs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m             \u001b[0mcurrentLog\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlogLikelihood\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcurrentLog\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mprLog\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mepselon\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-126-d68605791bd0>\u001b[0m in \u001b[0;36mchangeParametrs\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     92\u001b[0m             \u001b[0mB\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     93\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mvalue\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 94\u001b[1;33m                 \u001b[0mB\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mvalue\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     95\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m         \u001b[1;31m# change\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: invalid index to scalar variable."
+      "Log doesnot change: stop in 1 iteration\n",
+      "'FITTED'\n",
+      "'Parametrs'\n",
+      "(\"TransitionsProbability: {'F': array([0.7893527, 0.2106473]), 'U': \"\n",
+      " 'array([0.10906021, 0.89093979])}')\n",
+      "(\"diceValueProbability: {'F': [0.046962837490610906, 0.024167104074779136, \"\n",
+      " '0.37828010823602204, 0.41041549268000943, 0.03168037030364222, '\n",
+      " \"0.10849408721493618], 'U': [0.2101114173507775, 0.2183847947500559, \"\n",
+      " '0.08986466898899952, 0.07820160211038087, 0.21565796487015093, '\n",
+      " '0.1877795519296353]}')\n"
      ]
     }
    ],
@@ -1582,30 +1585,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+       "Counter({1: 52, 2: 49, 3: 37, 4: 46, 5: 39, 6: 77})"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in range(10)]"
+    "Counter(dataset300)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
