--- a/KhomutovTask-Copy1.ipynb
+++ b/KhomutovTask-Copy1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Хомутов Евгений Васильевич, МСКМ-191\n",
+    "# Вычислительная геномика"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -8,15 +16,65 @@
    "source": [
     "import pprint\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from simpleGenerator import Croupier"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Импортируем класс Croupier, который отвечает за генерацию данных и создадим экземпляр класса с заданными значениями вероятности для нечестного кубика, а так же вероятности перехода с честного кубика на нечестный и на себя самого, и вероятности перехода с нечестного кубика на себя и на честный. Проверим что получаем выпавшие знаечение кубика, а так же метку кубика"
+    "Импортируем класс Croupier, который отвечает за генерацию данных и создадим экземпляр класса с заданными значениями вероятности для нечестного кубика, а так же вероятности перехода с честного кубика на нечестный и на себя самого, и вероятности перехода с нечестного кубика на себя и на честный. Проверим что получаем выпавшие знаечение кубика, а так же метку кубика."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В качестве начального распределения возьмем предельное распределение. Решая систему уравнений и нормировочное уравнение:\n",
+    "$$\n",
+    "0.95p_1+ 0.05p_2 = p_1\n",
+    "$$\n",
+    "$$\n",
+    "0.01p_1+ 0.9p_2 = p_2\n",
+    "$$\n",
+    "$$\n",
+    "p_1 + p_2 = 1 \n",
+    "$$\n",
+    "получаем, что искомые вероятности равны (2/3;1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Croupier():\n",
+    "    def __init__(self):\n",
+    "        self.states = ['F','U'] # F for Fair state, U for Unfair state\n",
+    "        self.transitionsProbability = {\n",
+    "            'F': [0.95,0.05], # to F, to U\n",
+    "            'U': [0.1,0.9] # to F, to U\n",
+    "        }\n",
+    "        \n",
+    "        self.startProbability = [2/3,1/3]\n",
+    "\n",
+    "        self.currentState = np.random.choice(self.states, p =self.startProbability)\n",
+    "        self.diceValues = [1,2,3,4,5,6]\n",
+    "        self.diceValueProbability = {\n",
+    "            'F': [1/6 for i in range(6)],\n",
+    "            'U': [.1,.1,.1,.1,.1,.5]\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "    def changeDice(self):\n",
+    "        self.currentState = np.random.choice(self.states,p=self.transitionsProbability[self.currentState])\n",
+    "\n",
+    "    def roll(self):\n",
+    "        return np.random.choice(self.diceValues, p=self.diceValueProbability[self.currentState]), self.currentState\n",
+    "\n",
+    "    def __call__(self):\n",
+    "        self.changeDice()"
    ]
   },
   {
@@ -1524,7 +1582,7 @@
     "                    self.diceValueProbability[newState][self.data[i+1] - 1] \n",
     "                    for i in range(self.L-1)\n",
     "                ]\n",
-    "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/ self.pathProbability\n",
+    "                probability = sum(sum_step) * self.transitionsProbability[fromState][newI]/self.pathProbability\n",
     "                A[fromState][newState] = probability\n",
     "        # Add B\n",
     "        B = {}\n",
@@ -1581,35 +1639,6 @@
    "source": [
     "trainig = BaumWelchTrainig(dataset300)\n",
     "trainig()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({1: 52, 2: 49, 3: 37, 4: 46, 5: 39, 6: 77})"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Counter(dataset300)"
    ]
   },
   {
