--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -2656,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2688,7 +2688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2705,7 +2705,7 @@
     "        self.conditionalProbability = None\n",
     "        \n",
     "        #self.epselon = 10**-100\n",
-    "        self.epselon = 0.01\n",
+    "        self.epselon = 1\n",
     "        self.iterationNumber = 1000\n",
     "        \n",
     "    def stepForward(self, index):\n",
@@ -2818,23 +2818,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log doesnot change: stop in 42 iteration\n",
+      "Log doesnot change: stop in 5 iteration\n",
       "'FITTED'\n",
       "'Parametrs'\n",
-      "(\"TransitionsProbability: {'F': array([0.16004591, 0.83995409]), 'U': \"\n",
-      " 'array([0.1409191, 0.8590809])}')\n",
-      "(\"diceValueProbability: {'F': [3.759267678849122e-08, 4.003514677871167e-09, \"\n",
-      " '9.68981599101952e-07, 0.9237338090261323, 0.0762651802924771, '\n",
-      " \"1.0360003711615558e-10], 'U': [0.1996827849961054, 0.19968279165000943, \"\n",
-      " '0.19968260049098255, 0.016694122706629625, 0.18457490773370314, '\n",
-      " '0.1996827924225698]}')\n"
+      "(\"TransitionsProbability: {'F': array([0.3226459, 0.6773541]), 'U': \"\n",
+      " 'array([0.17324779, 0.82675221])}')\n",
+      "(\"diceValueProbability: {'F': [0.00026068700109368575, 2.7860476604130274e-05, \"\n",
+      " '0.0020567195755569704, 0.5672830802048101, 0.43037093153560324, '\n",
+      " \"7.212063319211992e-07], 'U': [0.23420811229734761, 0.23430261274785305, \"\n",
+      " '0.23347913226476202, 0.004063064511720269, 0.05963345004777603, '\n",
+      " '0.23431362813054082]}')\n"
      ]
     }
    ],
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
