--- a/KhomutovTask.ipynb
+++ b/KhomutovTask.ipynb
@@ -1462,7 +1462,14 @@
     "        self.b = self.b[::-1]\n",
     "        self.scaledConstB = self.scaledConstB[::-1]\n",
     "        for i in range(self.L):\n",
-    "            conProb = self.f[i][0]*self.b[i][0] * multiply(self.scaledConstB[i:])/(self.pathProbability*multiply(self.scaledConstF[i+1:]))\n",
+    "            # трюк чтобы не терять точность\n",
+    "            ###\n",
+    "            coeff = 1\n",
+    "            for backCoeff, forwardCoeff in zip(scaledConstB[i:],self.scaledConstF[i+1:]):\n",
+    "                coeff *= backCoeff/forwardCoeff\n",
+    "            conProb = self.f[i][0]*self.b[i][0] / self.pathProbability * coeff\n",
+    "            \n",
+    "            #conProb = self.f[i][0]*self.b[i][0] * multiply(self.scaledConstB[i:])/(self.pathProbability*multiply(self.scaledConstF[i+1:]))\n",
     "            self.conditionalProbability.append(conProb)"
    ]
   },
