rewrite Baum-welch

--- a/KhomutovTaskBeatifulOne.ipynb
+++ b/KhomutovTaskBeatifulOne.ipynb
@@ -1370,7 +1370,7 @@
     "        self.scaledConstB.append(max(self.b[-1]))\n",
     "        self.b[-1] = self.b[-1]/self.scaledConstB[-1]        \n",
     "        \n",
-    "    def initialization(self):\n",
+    "    def initialization(self): # Тоже следует красиво переписать\n",
     "        ### Forward part ###\n",
     "        # Init\n",
     "        self.f.append([self.startProbability[state] for state in self.states] * \n",
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,76 +1573,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BaumWelchTrainig(parametrs):\n",
+    "class BaumWelchTrainig(parametrs, PosteriorDecoding):\n",
     "    def __init__(self, data):\n",
+    "        backwardAlgorithm.__init__(self, data)\n",
+    "        forwardAlgorithm.__init__(self, data)\n",
     "        parametrs.__init__(self, data)\n",
-    "\n",
-    "        # For forward\n",
-    "        self.f = []\n",
-    "        self.pathProbability = None\n",
-    "        # for backward\n",
-    "        self.b = []\n",
-    "        # For decoding\n",
-    "        self.conditionalProbability = None\n",
     "        \n",
     "        #self.epselon = 10**-100\n",
     "        self.epselon = 1\n",
     "        self.iterationNumber = 1000\n",
-    "        \n",
-    "    def stepForward(self, index):\n",
-    "        self.f.append([])\n",
-    "        previuosState = self.f[-2]\n",
-    "        for i, state in enumerate(self.states):\n",
-    "            transitionProbability = np.array([val[i] for val in self.transitionsProbability.values()])\n",
-    "            observedProbability = self.diceValueProbability[state][self.data[index] - 1]\n",
-    "            probability = observedProbability * sum(previuosState * transitionProbability)\n",
-    "            self.f[-1].append(probability)\n",
-    "    \n",
-    "    def stepBackward(self, index):\n",
-    "        self.b.append([])\n",
-    "        nextState = self.b[-2]\n",
-    "        observedProbability =  np.array([val[self.data[index]-1] for val in self.diceValueProbability.values()])\n",
-    "        for state in self.states: # first fair then unfair\n",
-    "            transitionProbability = self.transitionsProbability[state]\n",
-    "            probability = sum(transitionProbability * observedProbability * nextState)\n",
-    "            self.b[-1].append(probability)\n",
     "            \n",
-    "    def initializationForwardBack(self):\n",
-    "        ### Forward part ###\n",
-    "        # Init\n",
-    "        self.f.append([self.startProbability[state] for state in self.states] * \n",
-    "                      np.array([self.diceValueProbability[state][self.data[0] - 1] for state in self.states]))\n",
-    "        # Recursion\n",
-    "        for i in range(1,self.L):\n",
-    "            self.stepForward(i)\n",
-    "        self.pathProbability = sum(self.f[-1])\n",
-    "        self.b.append([1,1])\n",
-    "        ### Backward part ###\n",
-    "        for i in range(self.L-1,0,-1): # С двойки?\n",
-    "            self.stepBackward(i)\n",
-    "        self.b = self.b[::-1]\n",
-    "    \n",
-    "    \n",
     "    def __call__(self):\n",
     "        if self.isFitted == False: self.initialization()\n",
     "        pprint.pprint('FITTED')\n",
     "        pprint.pprint('Parametrs')\n",
     "        pprint.pprint('TransitionsProbability: {}'.format(self.transitionsProbability))\n",
-    "        #pprint.pprint('startProbability: {}'.format(self.startProbability))\n",
     "        pprint.pprint('diceValueProbability: {}'.format(self.diceValueProbability))\n",
     "    \n",
     "    def initialization(self):\n",
     "        prLog = 1000000000\n",
     "        for step in range(self.iterationNumber):\n",
-    "            # Calculate f and b\n",
-    "            self.f = []\n",
-    "            self.pathProbability = 0\n",
-    "            self.b = []\n",
-    "            self.initializationForwardBack()\n",
+    "            \n",
+    "            super().initialization()\n",
+    "            \n",
     "            # Change paramets\n",
     "            self.changeParametrs()\n",
     "            currentLog = self.logLikelihood()\n",
@@ -1703,9 +1660,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log doesnot change: stop in 1 iteration\n",
+      "'FITTED'\n",
+      "'Parametrs'\n",
+      "(\"TransitionsProbability: {'F': array([0.80777133, 0.19222867]), 'U': \"\n",
+      " 'array([0.09542958, 0.90457042])}')\n",
+      "(\"diceValueProbability: {'F': [0.11580290488493833, 0.14182808851809828, \"\n",
+      " '0.14553881525799708, 0.17299022482935972, 0.3414888423310744, '\n",
+      " \"0.08235112417853215], 'U': [0.15009828770879638, 0.1562886508712062, \"\n",
+      " '0.05816023271497919, 0.14416346225052867, 0.18840346197094548, '\n",
+      " '0.30288590448354397]}')\n"
+     ]
+    }
+   ],
    "source": [
     "trainig = BaumWelchTrainig(dataset300)\n",
     "trainig()"
